--- a/generic.html
+++ b/generic.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <!--
 	RTL Styles And Translation : MrCode.ir - https://mrcode.ir
 	Stellar by HTML5 UP
@@ -23,8 +23,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>عمومی</h1>
-						<p>محتوای شما در اینجا</p>
+						<h1>سپاس گزاری</h1>
+						<p>سپاس گزاری و معجزه</p>
 					</header>
 
 				<!-- Main -->
@@ -33,7 +33,7 @@
 						<!-- Content -->
 							<section id="content" class="main">
 								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
-								<h2>یک عنوان چشمگیر</h2>
+								<h2>معجزه ی سپاس گزاری</h2>
 								<p>چهار سال بعد، در ۱۹۵۷ که ایبوکا و موریتا شروع به فروش اولین رادیوهای ترانزیستوری جیبی در دنیا کردند، به دنبال نامی جدید و مناسب برای شرکتشان می‌گشتند. لذا یکی از کلمات رایج در آن زمان یعنی (به انگلیسی: Sonny) به معنای پسر بچه را با عبارت (به لاتین: Sonus) که از ریشه (به انگلیسی: Sound) بود، ترکیب کردند و از آن کلمه سونی (به انگلیسی: Sony) را پدید آوردند، که در هر زبانی به راحتی قابل تلفظ کردن و خوانده شدن است. این ترکیب گویای گروهی از جوانان است، که انرژی و علاقه بسیاری برای ارائه تولیدات و ایده‌های جدید دارند.</p>
 								<p>با نام‌گذاری جدید، شرکت به تجارت با ایالات متحده آمریکا متمایل شد. ایبوکا و موریتا دریافتند، که در دراز مدت مهم‌ترین بازار آنها به ویژه در بخش ابداعات جدید، ایالات متحده خواهد بود. آنها به این نتیجه رسیدند که هر کس بتواند در آنجا نفوذ کند، می‌تواند در تمام دنیا فعالیت‌های خود را گسترش دهد. اواخر دهه ۱۹۵۰ بسیاری از شرکت‌های دیگر ژاپنی مثل تویوتا نیز به همین نتیجه رسیدند، ولی می‌توان سونی را تنها شرکت ژاپنی دانست، که حاضر شد تمام سیاست‌های خویش را مبتنی بر مقتضیات تجارت در ایالات متحده، شکل دهد.</p>
 								<h2>و عنوانی دیگر در اینجا</h2>
