--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <!--
 	RTL Styles And Translation : MrCode.ir - https://mrcode.ir
 	Stellar by HTML5 UP
@@ -47,11 +47,11 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>عنوان دلخواه شما در اینجا</h2>
+											<h2>مقدمه</h2>
 										</header>
-										<p>شرکت مایکروسافت (به انگلیسی: Microsoft Corporation) یک شرکت چند ملیتی است که مرکز آن در ایالات متحده آمریکا قرار دارد. این شرکت، بزرگترین شرکت ارائه نرم‌افزار رایانه در دنیاست که به انتشار کتاب و تولید محصولات چندرسانه‌ای و ارائه خدمات پست الکترونیکی نیز می‌پردازد. مایکروسافت در سال مالی منتهی به ژوئن ۲۰۱۰ میلادی، بیش از ۶۲ میلیارد دلار درآمد فروش، بیش از ۱۸ میلیارد دلار سود خالص و ۸۹٬۰۰۰ کارمند در کشورهای مختلف دنیا داشته است.</p>
+										<p> که سپاس گزار باشیم .آیا خداوند به سپاس گزاری ما احتیاج دارد ؟ هرگز! او بی نیاز مطلق است پس دلیل این همه سفارش به سپاس گزار بودن چیست ؟ این است که سپاس گزار بودن در زندگی انسان معجزه میکند . اما سپاس گزارانه زیستن چگونه است ؟بی تردید سپاس گزاری بر هیچ کس پوشیده نیست.خداوند بارها وبارها در قران به ما فرمان داده است </p>
 										<ul class="actions">
-											<li><a href="generic.html" class="button"> با ما بیشتر آشنا شوید</a></li>
+											<li><a href="generic.html" class="button"> با معجزه بیشتر آشنا شوید</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
@@ -61,23 +61,23 @@
 						<!-- First Section -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>چه سرویس هایی ارائه میکنیم؟</h2>
+									<h2>چه راهکار هایی هایی ارائه میکنیم؟</h2>
 								</header>
 								<ul class="features">
 									<li>
 										<span class="icon major style1 fa-code"></span>
-										<h3>طراحی سایت</h3>
-										<p>طراحی وب به مهارت ساخت و راه‌اندازی صفحات وب گفته می‌شود. تیم برنرز لی، مخترع وب، با برپایی یک سایت وب در اوت ۱۹۹۱، نام خود را به عنوان نخستین سازندهٔ وب در تاریخ نگاشت.</p>
+										<h3>26روش سپاس گزاری</h3>
+										<p>انسان سپاس گزار باید سپاس گزاری در کردارش باشد . شاید فرآیند سپاس گزاری با این جمله "سپاس گزارم" با این جمله شروع شود اما گفتن این جمله فقط سرآغاز ماجرا خواهد بود.</p>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
-										<h3>بهینه سازی موتورهای جستجو</h3>
-										<p>بهینه سازی سایت (سئو) به فرآیندی گفته می شود که با استفاده از ترکیب تکنیکهای برنامه نویسی، محتوای سایت و عوامل خارجی تاثیر گذار در رنکینگ گوگل و استفاده از علم سئو باعث افزایش ترافیک و بازدید سایت شما خواهد شد.</p>
+										<h3>رازی بزرگ آشکار میشود</h3>
+										<p>"ان کس که دارد بیشتر به او داده خواهد شد و او از فراوانی بهره مند خواهد بود . ان کس که ندارد حتی داشته هایش نیز از او گرفته خواهد شد"</p>
 									</li>
 									<li>
 										<span class="icon major style5 fa-diamond"></span>
-										<h3>آموزش وردپرس</h3>
-										<p>وردپرس نرم‌افزاری تحت وب است که می‌توانید از آن برای ساختن سرویس وبلاگدهی، وبسایت یا وبلاگی زیبا و قدرتمند استفاده کنید. مایلیم با افتخار اعلام کنیم که وردپرس باارزش و مجانی است.</p>
+										<h3>معجزه را به زندگیتان فرا بخوانید</h3>
+										<p> قرار دارید .در هر صورت معجزه سپاس گزاری کل زندگیتان را در بر خواهد گرفت فرقی نمی کند که چه کسی یا کجا هستید و در چه موقعیتی </p>
 									</li>
 								</ul>
 								<footer class="major">
