--- a/generic.html
+++ b/generic.html
@@ -34,7 +34,7 @@
 							<section id="content" class="main">
 								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
 								<h2>معجزه ی سپاس گزاری</h2>
-								<p>چهار سال بعد، در ۱۹۵۷ که ایبوکا و موریتا شروع به فروش اولین رادیوهای ترانزیستوری جیبی در دنیا کردند، به دنبال نامی جدید و مناسب برای شرکتشان می‌گشتند. لذا یکی از کلمات رایج در آن زمان یعنی (به انگلیسی: Sonny) به معنای پسر بچه را با عبارت (به لاتین: Sonus) که از ریشه (به انگلیسی: Sound) بود، ترکیب کردند و از آن کلمه سونی (به انگلیسی: Sony) را پدید آوردند، که در هر زبانی به راحتی قابل تلفظ کردن و خوانده شدن است. این ترکیب گویای گروهی از جوانان است، که انرژی و علاقه بسیاری برای ارائه تولیدات و ایده‌های جدید دارند.</p>
+								<p>، "آیا زمان کودکی خود را به یاد  می آ ورید که چقدر زندگی را شگفت آور میدانستید .شگفتی های دوران کودکیتان واقعیت دارد و نگرش ما در بزرگسالس اغلب نگرشی اشتباه است .شگفتی های زندگی واقعیت دارند زندگی میتواند بسیار شگفت انگیز تر و مهیج تر از دوران کودکی تان باشد زمانی که میدانید چه کاری را باید انجام دهید تا شگفتی های زندگی نمایان شوند.آیا آماده هستید دوباره شگفتی زندگی را فرا بخوانید ؟پس معجزه را فرا بخوانید. "انسان هایی که معجزه را باور ندارند هرگز آن را در زندگیشان نخواهند یافت".</p>
 								<p>با نام‌گذاری جدید، شرکت به تجارت با ایالات متحده آمریکا متمایل شد. ایبوکا و موریتا دریافتند، که در دراز مدت مهم‌ترین بازار آنها به ویژه در بخش ابداعات جدید، ایالات متحده خواهد بود. آنها به این نتیجه رسیدند که هر کس بتواند در آنجا نفوذ کند، می‌تواند در تمام دنیا فعالیت‌های خود را گسترش دهد. اواخر دهه ۱۹۵۰ بسیاری از شرکت‌های دیگر ژاپنی مثل تویوتا نیز به همین نتیجه رسیدند، ولی می‌توان سونی را تنها شرکت ژاپنی دانست، که حاضر شد تمام سیاست‌های خویش را مبتنی بر مقتضیات تجارت در ایالات متحده، شکل دهد.</p>
 								<h2>و عنوانی دیگر در اینجا</h2>
 								<p>از دهه ۱۹۵۰ میلادی، فعالیت‌های سونی تولید محصولاتی ازجمله تلویزیون، دستگاه‌های رادیویی با ابعاد مختلف (واکمن یکی از اختراعات شرکت توکیویی و محصول سال ۱۹۷۹ سونی به عنوان اولین دستگاه پخش موسیقی قابل حمل در جهان، اولین دستگاه کاست خوان و امروز پخش کننده دستگاه‌های ام‌پی‌تری دی‌وی‌دی و دیسک بلو-ری و دستگاه‌های ویدئویی مثل دستگاه‌های ضبط ویدئو و ویدئو کاست‌های مربوط (ازجمله سیستم نه چندان موفق بتامکس که در سال ۱۹۷۶ خلق شد و خیلی زود با فرمت وی‌اچ‌اس شرکت پاناسونیک جایگزین شد) انواع دستگاه‌های ال. دی، وی. سی. دی، دی. وی. دی، ام. دی و حتی یو. ام. دی (سیستم اوپتیک طراحی شده سونی برای پی. اس. پی پلی استیشن) و دوربین‌های تصویربرداری(cyber Shot)، دوربین‌های عکاسی دیجیتال(ALFA)و کامپیوترهای شخصی(VAIO)و به تازگی گوشی های هوشمند(XPERIA)که شناخته شده ترین آن‌ها هستند، را شامل می‌شوند.</p>
@@ -45,8 +45,8 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>درباره استلر</h2>
-							<p>این دو کارشناس به دنبال محصولات جدید و کارا بودند و می‌خواستند کالاهای مصرفی کاملاً نوینی روانه بازار کنند. برای این کار تکنولوژی مورد نیازشان را خود ابداع کردند. این ایده بعدها یکی از اصولی بود که آنها و همین طور مدیران سال‌های اخیر سونی، از آن پیروی می‌کردند، شرکتی که همواره خواسته همه ...</p>
+							<h2>درباره معجزه</h2>
+							<p>آیا میدانید شاعرانی مانند ویلیام شکسپیر و رابرت براونینگ در اشعار خود به این موضوع اشاره کردند موسیقی دانانی مثل بتهوون آن را در موسیقی خود به نمایش گذاشته اند و نقاشانی مثل داوینچی آن را در نقاشی هایشان به تصویر کشیده اند این قانون به انواع و شکل های مختلف در نوشته های باستانی تمام قرون یافت میشود و در نوشته های سنگی   ...</p>
 							<ul class="actions">
 								<li><a href="generic.html" class="button">کسب اطلاعات بیشتر</a></li>
 							</ul>
